--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,8 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/sails.io.js"  autoConnect="false"></script>
+        <script src="scripts/socket-script.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/createPage.js"></script>
         <!-- endbuild -->
