--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
         <script src="scripts/socket-script.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/createPage.js"></script>
+        <script src="scripts/controllers/currentJobs.js"></script>
         <!-- endbuild -->
 </body>
 </html>
