Current jobs showing realtime

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
     <script src="bower_components/angular-money-directive/dist/angular-money-directive.js"></script>
     <script src="bower_components/angular-google-places-autocomplete/src/autocomplete.js"></script>
     <script src="bower_components/angular-google-places-autocomplete/dist/autocomplete.min.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
