--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,8 @@
   <script src="bower_components/angular-google-places-autocomplete/src/autocomplete.js"></script>
   <script src="bower_components/angular-google-places-autocomplete/dist/autocomplete.min.js"></script>
   <script src="bower_components/moment/moment.js"></script>
+  <script src="bower_components/angular-counter/counter.js"></script>
+  <script src="bower_components/ng-clustered-map/dist/ng-clustered-map.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
