--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="bower_components/ngTimepickerNoDep/src/css/ngTimepicker.css" />
   <link rel="stylesheet" href="bower_components/angular-google-places-autocomplete/src/autocomplete.css" />
   <link rel="stylesheet" href="bower_components/angular-google-places-autocomplete/dist/autocomplete.min.css" />
+  <link rel="stylesheet" href="bower_components/roboto-fontface/css/roboto-fontface.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
