--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="bower_components/angular-google-places-autocomplete/src/autocomplete.css" />
   <link rel="stylesheet" href="bower_components/angular-google-places-autocomplete/dist/autocomplete.min.css" />
   <link rel="stylesheet" href="bower_components/roboto-fontface/css/roboto-fontface.css" />
+  <link rel="stylesheet" href="bower_components/c3/c3.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -65,6 +66,8 @@
   <script src="bower_components/angular-google-places-autocomplete/dist/autocomplete.min.js"></script>
   <script src="bower_components/moment/moment.js"></script>
   <script src="bower_components/angular-counter/counter.js"></script>
+  <script src="bower_components/d3/d3.js"></script>
+  <script src="bower_components/c3/c3.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -74,6 +77,7 @@
   <script src="scripts/socket-script.js"></script>
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/createPage.js"></script>
+  <script src="scripts/controllers/analytics-controller.js"></script>
   <script src="scripts/controllers/currentJobs.js"></script>
   <!-- endbuild -->
 
